# Narae-Lee

./: README.md
Angry_Bird_Game/: CMakeLists.txt  Game.elf  Game.gba  Makefile  draw.c  gba.c  gba.h  logic.c  logic.h  main.c
Angry_Bird_Game/images/: airplane.c  airplane.h  bird.c  bird.h  clouds.c  clouds.h  flightmap.c  flightmap.h  gameover.c  gameover.h  square.c  square.h  start.c  start.h  winscreen.c  winscreen.h
Week3-Introduction-to-Open-Data-Importing-Data-and-Basic-Data-Wrangling/: Week4_Introduction_to_Data_Manipulation.ipynb
